feat(ksp): generate component DSL