@@ -5,16 +5,19 @@ plugins {
 
     // Apply the Application plugin to add support for building an executable JVM application.
     application
+    alias(libs.plugins.ksp)
 }
 
 dependencies {
     // Project "app" depends on project "utils". (Project paths are separated with ":", so ":utils" refers to the top-level "utils" project.)
     implementation(project(":utils"))
     implementation(project(":lumentika-core"))
+    ksp(project(":lumentika-ksp"))
 }
 
 application {
     // Define the Fully Qualified Name for the application main class
     // (Note that Kotlin compiles `App.kt` to a class with FQN `com.example.app.AppKt`.)
     mainClass = "com.antepod.app.AppKt"
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
